--- a/hackthon/Hackthon-project/pages/login.html
+++ b/hackthon/Hackthon-project/pages/login.html
@@ -20,7 +20,7 @@
 
 <div class="navbar">
     <div class="heading">
-        <h4> dilawar Blogging App</h4>
+        <h4> Zubair Blogging App</h4>
     </div>
     <div class="logsinbtn">
        <a href="./signup.html" style="text-decoration: none; color: white;"><p>Signup</p></a> 
