--- a/hackthon/Hackthon-project/pages/update.html
+++ b/hackthon/Hackthon-project/pages/update.html
@@ -19,7 +19,7 @@
 
      <div class="navbar">
         <div class="heading">
-            <h3> dilawar Blogging App</h3>
+            <h3> Zubair Blogging App</h3>
         </div>
         <div class="logsinbtn">
             <a style="text-decoration: none; color: white; cursor: pointer;" style="display: none;"  id="userss"><p style="display: none;" >User</p></a> 
